Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-13757

[Upgrade 2.5.1->3.0.2] Rebalance failing with 'bad replicas' as replication fails to start

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 3.0.3
    • 3.0.1, 3.0.2
    • couchbase-bucket
    • Security Level: Public
    • None
    • Untriaged
    • Unknown
    • Mar 9 - Mar 27

    Description

      Replication fails to start as stream requests fail because the snapshot range sequence numbers for a replica vbucket are invalid.

      [ns_server:debug,2015-03-02T18:48:25.306,ns_1@192.168.26.84:dcp_consumer_conn-lplink-ns_1@192.168.26.45<0.17424.475>:dcp_proxy:handle_packet:115]Proxy packet: REQUEST: 0x53 (dcp_stream_req) vbucket = 428 opaque = 0xC3050000
      80 53 00 00
      30 00 01 AC
      00 00 00 30
      C3 05 00 00
      00 00 00 00
      00 00 00 00
      00 00 00 00
      00 00 00 00
      00 00 00 00
      00 00 00 1D
      FF FF FF FF
      FF FF FF FF
      00 00 BE 06
      A2 53 62 C7
      00 00 00 00
      00 00 00 1C
      00 00 00 00
      00 00 00 1C

      [ns_server:debug,2015-03-02T18:48:25.311,ns_1@192.168.26.84:<0.17860.475>:dcp_proxy:handle_packet:115]Proxy packet: RESPONSE: 0x53 (dcp_stream_req) vbucket = 0 opaque = 0xC3050000 status = 0x22 (erange)
      81 53 00 00
      00 00 00 22
      00 00 00 0D
      C3 05 00 00
      00 00 00 00
      00 00 00 00
      4F 75 74 73
      69 64 65 20
      72 61 6E 67
      65
      [ns_server:debug,2015-03-02T18:48:25.315,ns_1@192.168.26.84:dcp_consumer_conn-lplink-ns_1@192.168.26.45<0.17424.475>:dcp_proxy:handle_packet:115]Proxy packet: RESPONSE: 0x51 (dcp_add_stream) vbucket = 0 opaque = 0x1AC status = 0x22 (erange)
      81 51 00 00
      04 00 00 22
      00 00 00 04
      00 00 01 AC
      00 00 00 00
      00 00 00 00
      00 00 05 C3

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              abhinav Abhi Dangeti
              abhinav Abhi Dangeti
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty